
2008-05-29 cjg
 * Fixed bug in rendering of XHTML values in EPScript.
 * Fixed some out-of-data apache methods in the VLit extension.
 * Fixed a typo in the toolbox code s/AND/ANY/
 * Fixed missing / with redirecting /perl/ to /cgi/

======================================================================
EPRINTS-3.1-rc-1
======================================================================

2008-06-04 tdb
 * Fixed views not working for name-type metafields, fixing #3380

2008-06-04 cjg
 * Fixed bug which meant only first attachment to an email actually
    got attached.

2008-06-05 tdb
 * Trap die()s in Repository::parse_xml(), fixing #3220

2008-06-09 cjg
 * Added a test for illegal searching of a compound field with a useful 
    error rather than a crash. Fixies #3329 (still aborts, but is no longer
    confusing)

2008-06-09 cjg
 * Added missing phrase Plugin/InputForm/Component/Upload:conversion_failed

2008-06-09 cjg
 * Removed unused "subheadings" property from views.pl
 * Made the encode/decode utils have a one-to-one mapping so it can be 
    correctly reversed. Fixed issues with view values containing whitespace.

2008-06-09 cjg
 * If a config file ends with .xml and does not match one of the config file
    formats, it's just set as "XML".
 * XML files may be viewed and edited by people with the other permissions
    to view/edit config files. Fixing #3339

2008-06-11 cjg 
 * Files grabbed from URLs now correctly run throught the guess format 
    method, so don't just end up as "Other".

2008-06-13 cjg
 * Fixed issue with single quotes in javascript confirm messages.
 * No "action" on a search is now considered a search action, if there were
    other cgi parameters set. Fixing #2975.

2008-06-13 cjg
 * Fixed issue in issues which meant XML was being double escaped.

======================================================================
EPRINTS-3.1.0-rc-2
======================================================================