@@ -7504,3 +7504,9 @@ EPRINTS-3.1-rc-1
 ======================================================================
 EPRINTS-3.1.0-rc-2
 ======================================================================
+
+2008-06-17 cjg
+ * Fixed a couple of parentNode DOM calls, which should have been 
+    getParentNode
+ * Fixed a bug in the config viewer which stoped namedsets with underscores
+    being counted as namedsets. (extended the regexp)
